<resources>
    <string name="app_name">올인원</string>

    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 재입력</string>

    <string name="currency">환율 서비스</string>
    <string name="insurance">기타 서비스</string>

    <string name="us_dollar_name">미국 달러</string>
    <string name="us_dollar_amount">1$</string>

    <string name="euro_name">유로</string>
    <string name="euro_amount">1€</string>

    <string name="yen_name">일본 엔</string>
    <string name="yen_amount">100¥</string>

    <string name="yuan_name">중국 위안</string>
    <string name="yuan_amount">1¥</string>

    <string name="exchange">환전 예약하기</string>
    <string name="exchange_etc">또는 위에 없는 기타 통화 환전 사전 예약하기</string>

    <string name="input">금액</string>

    <string name="first_step">1.환전하실 통화와 금액을 입력해주세요</string>

    <string name="next">다음</string>
</resources>
