<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity.CurrencyActivity">


    <android.support.constraint.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/middle_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/left_menu_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/left_menu_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/right_menu_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/right_menu_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/menu_top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.035" />

    <android.support.constraint.Guideline
        android:id="@+id/menu_bottom_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:id="@+id/currency_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/middle_guide"
        app:layout_constraintLeft_toLeftOf="@id/left_menu_left"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/top_guide">

        <LinearLayout
            android:id="@+id/currency_dollar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/currency_dollar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/nation_us" />

            <TextView
                android:id="@+id/currency_dollar_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/us_dollar_name" />

            <TextView
                android:id="@+id/currency_dollar_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/us_dollar_amount" />

            <TextView
                android:id="@+id/currency_dollar_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/currency_euro"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/currency_euro_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:src="@drawable/nation_eu" />

            <TextView
                android:id="@+id/currency_euro_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/euro_name" />

            <TextView
                android:id="@+id/currency_euro_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/euro_amount" />

            <TextView
                android:id="@+id/currency_euro_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currency_yen"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/currency_yen_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/nation_japan" />

            <TextView
                android:id="@+id/currency_yen_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/yen_name" />

            <TextView
                android:id="@+id/currency_yen_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/yen_amount" />

            <TextView
                android:id="@+id/currency_yen_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currency_yuan"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/currency_yuan_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/nation_china" />

            <TextView
                android:id="@+id/currency_yuan_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/yuan_name" />

            <TextView
                android:id="@+id/currency_yuan_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:text="@string/yuan_amount" />

            <TextView
                android:id="@+id/currency_yuan_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/currency_reservation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exchange"
        android:textColor="@color/grayLight"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/currency_box" />

    <ImageButton
        android:id="@+id/currency_my_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/button_my_menu"
        app:layout_constraintBottom_toTopOf="@id/menu_bottom_guide"
        app:layout_constraintLeft_toRightOf="@id/left_menu_left"
        app:layout_constraintRight_toLeftOf="@id/left_menu_right"
        app:layout_constraintTop_toBottomOf="@id/menu_top_guide" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_etc"
        android:textColor="@color/grayLight"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/currency_reservation" />

</android.support.constraint.ConstraintLayout>